# InfoLogger

./: .gitignore  .travis.yml  BuildAll.cmake  BuildLib.cmake  BuildStandalone.cmake  BuildTest.cmake  CMakeLists.txt  InfoLoggerConfig.cmake.in  InfoLoggerConfigVersion.cmake.in  InstallAndExport.cmake  README.md  documentation-config.doxygen.in  infoBrowser.cfg  infoBrowser.config  infoLoggerClient.cfg  infoLoggerD.cfg  infoLoggerD.service  infoLoggerServer.cfg  infoLoggerServer.service  newMysql.sh  o2-infologger-alert.service
cmake/: FindMySQL.cmake  InfoLoggerConfig.cmake  InfoLoggerConfig.cmake.in  InfoLoggerDependencies.cmake  O2Utils.cmake
doc/: CMakeLists.txt  README.md  doxyfile.in  infoBrowser.md  infoBrowser.png.REMOVED.git-id  infoLogger_architecture.odp  releaseNotes.md  scriptingAPI.md
example/: CMakeLists.txt  exampleLog.cxx
include/: CMakeLists.txt  InfoLogger.h  InfoLogger.hxx
include/InfoLogger/: InfoLogger.h  InfoLogger.hxx  InfoLoggerFMQ.hxx  InfoLoggerMacros.hxx  Version.h.in
src/: CMakeLists.txt  ConfigInfoLoggerServer.cxx  ConfigInfoLoggerServer.h  InfoLogger.c  InfoLogger.cxx  InfoLoggerClient.cxx  InfoLoggerClient.h  InfoLoggerContext.cxx  InfoLoggerDispatch.cxx  InfoLoggerDispatch.h  InfoLoggerDispatchBrowser.cxx  InfoLoggerDispatchSQL.cxx  InfoLoggerDispatchStats.cxx  InfoLoggerErrorCodes.h  InfoLoggerMessageHelper.cxx  InfoLoggerMessageHelper.h  InfoLoggerMessageList.cxx  InfoLoggerMessageList.h  InfoLoggerScripting.cxx  InfoLoggerScripting.hxx  infoBrowser.tcl  infoLogger.i  infoLoggerAdminDB.cxx  infoLoggerD.cxx  infoLoggerDefaults.h  infoLoggerForPython.py  infoLoggerForPython_wrap.cxx  infoLoggerForTcl_wrap.cxx  infoLoggerGenerateMacros.tcl  infoLoggerJAVASCRIPT_wrap.cxx  infoLoggerMessage.c  infoLoggerMessage.h  infoLoggerMessageDecode.c  infoLoggerMessageDecode.h  infoLoggerServer.cxx  infoLoggerServer_insert.h  infoLoggerServer_insert_sql.c  infoLoggerTester.tcl  infoLoggerUtils.cxx  infoLoggerUtils.h  (+21 more)
test/: CMakeLists.txt  testInfoLogger.c  testInfoLogger.cxx  testInfoLoggerDB.cxx  testInfoLoggerPerf.cxx
